--- a/libros.html
+++ b/libros.html
@@ -8,7 +8,7 @@
 	<!-- Bootstrap 5.1.3 -->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<!-- Estilos Propios -->
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="css/libros.css">
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=PT+Serif&display=swap" rel="stylesheet"> 
 	<title>Librería {coding}</title>
@@ -21,7 +21,7 @@
 		<nav class="mt-3">
 			<!-- Menu de navegacion superior -->
 			<ul>
-				<li><a href="./libros.html">Libros</a></li>
+				<li><a href="#">Libros</a></li>
 				<li><a href="./mis_compras.html">Mis Compras</a></li>				
 				<li><a href="./registro.html">Registrarse</a></li>
 			</ul>
