Modificando titulo principal, y su estilo

--- a/libros.html
+++ b/libros.html
@@ -16,11 +16,11 @@
 <body>
 
 	<header id="inicio">
-		<h1 class="text-white text-center display-4 pt-5">Librer&iacute;a <span class="fw-bold">{&nbsp;coding&nbsp;}</span></h1>
-
+		<h1 class="text-white text-center pt-5"><span id="titulo">Librer&iacute;a </span><span class="fw-bold text-uppercase">{&nbsp;coding&nbsp;}</span></h1>
 		<nav class="mt-3">
 			<!-- Menu de navegacion superior -->
 			<ul>
+                <li><a href="./index.html">Inicio</a></li>
 				<li><a href="#">Libros</a></li>
 				<li><a href="./mis_compras.html">Mis Compras</a></li>				
 				<li><a href="./registro.html">Registrarse</a></li>
