--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 <body>
 
 	<header id="inicio">
-		<h1 class="text-white text-center display-4 pt-5">Librer&iacute;a <span class="fw-bold">{&nbsp;coding&nbsp;}</span></h1>
+		<h1 class="text-white text-center pt-5"><span id="titulo">Librer&iacute;a </span><span class="fw-bold text-uppercase">{&nbsp;coding&nbsp;}</span></h1>
 
 		<nav class="mt-3">
 			<!-- Menu de navegacion superior -->
 			<ul>
+				<li><a href="#">Inicio</a></li>
 				<li><a href="./libros.html">Libros</a></li>
 				<li><a href="./mis_compras.html">Mis Compras</a></li>				
 				<li><a href="./registro.html">Registrarse</a></li>
