JS del formulario de registro

--- a/libros.html
+++ b/libros.html
@@ -49,7 +49,7 @@
 	<script type="text/javascript" src="js/popper.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>	
 	<!-- JS Propio -->
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="module" src="js/main.js"></script>
 
 </body>
 </html>
