Desarrollo seccion libros, con su javascript

--- a/libros.html
+++ b/libros.html
@@ -29,8 +29,8 @@
 	</header>
 	
 
-	<main>
-		
+	<main class="container mt-5">
+		<section id="seccion" class="row row-cols-1 row-cols-md-3 g-4 mb-5"></section>
 	</main>
 
 		
@@ -49,7 +49,8 @@
 	<script type="text/javascript" src="js/popper.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>	
 	<!-- JS Propio -->
-	<script type="module" src="js/main.js"></script>
+	<!--<script type="module" src="js/main.js"></script>-->
+	<script type="module" src="js/libros.js"></script>
 
 </body>
 </html>
